# ekg-prometheus-adapter

./: .gitignore  ekg-prometheus-adapter.cabal  stack.yaml
src/System/Remote/Monitoring/: Prometheus.hs
