name:                ekg-prometheus-adapter
version:             0.2.0.1
synopsis:            Easily expose your EKG metrics to Prometheus
description:         Forked from original implementation by Alfredo Di Napoli on https://github.com/adinapoli/ekg-prometheus-adapter
homepage:            https://github.com/CodiePP/ekg-prometheus-adapter
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           2016 Alfredo Di Napoli
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Remote.Monitoring.Prometheus
  build-depends:       base >= 4.7 && < 5
                     , prometheus
                     , ekg-core
                     , unordered-containers
                     , containers
                     , text
                     , transformers
                     , microlens-th
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ekg-prometheus-adapter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CodiePP/ekg-prometheus-adapter
